--- a/package.json
+++ b/package.json
@@ -32,6 +32,6 @@
     "react-dom": "^15.3.2"
   },
   "scripts": {
-    "dev": "webpack-dev-server --content-base client/ --inline"
+    "dev": "webpack-dev-server --content-base ./ --inline"
   }
 }
